<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="@dimen/pading"
    tools:context=".ConfirmDataActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/titulo_confirm_data"
        android:layout_gravity="center"
        android:textSize="@dimen/title_confirm_data"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/tvDatos"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/padinb_top_button"
        android:text="@string/app_name"
        android:lineSpacingExtra="@dimen/text_spacing_extra"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btm_editar_datos"
        android:layout_marginTop="@dimen/padinb_top_button"
        android:onClick="editarDatos"
        android:layout_gravity="center"
        android:background="@color/colorAccent"/>

</LinearLayout>